update to use player.getWorld() method